@@ -1,0 +1,1 @@
+<%# locals: (title: 'ct') %><%= title %>
